Move compilation target to Android API 18, move some classes to proper packages
Signed-off-by: Frca <killerfrca@gmail.com>

--- a/Purtges-Android/src/main/res/values/styles.xml
+++ b/Purtges-Android/src/main/res/values/styles.xml
@@ -1,7 +1,8 @@
 <resources>
 
     <!--parent="@style/Theme.AppCompat.Light"-->
-    <style name="AppBaseTheme" parent="android:Theme.Holo.Light.DarkActionBar"> </style>
+    <!--<style name="AppBaseTheme" parent="android:Theme.Holo.Light.DarkActionBar"> </style>-->
+    <style name="AppBaseTheme" parent="@style/Theme.AppCompat.Light"> </style>
 
     <style name="AppTheme" parent="AppBaseTheme"> </style>
 
