--- a/Purtges-Android/src/main/res/layout/fragment_log.xml
+++ b/Purtges-Android/src/main/res/layout/fragment_log.xml
@@ -1,12 +1,13 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
         android:layout_marginTop="15dp">
 
         <ProgressBar
@@ -24,14 +25,15 @@
     </LinearLayout>
 
     <ScrollView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
         <TextView
             android:id="@+id/text_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="bottom"
-            />
+            android:layout_gravity="bottom" />
+
     </ScrollView>
 
-</RelativeLayout>
+</LinearLayout>
